<resources>
    <string name="app_name">Product Catalog</string>
    <string name="ErrorMsgAdd">Error adding the product</string>
    <string name="ErrorMsgUpdate">Error updating the product</string>
    <string name="ErrorMsgDelete">Error deleting the product</string>
    <string name="ErrorMsgGetAll">Error getting all products</string>
    <string name="ErrorMsgGetById">Error getting the requested product</string>
    <string name="label_id">Product ID</string>
    <string name="label_name">Name</string>
    <string name="label_description">Description</string>
    <string name="label_price">Price</string>
    <string name="button_add">Add</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="button_search">Search</string>
    <string name="button_clear">Clear fields</string>
    <string name="button_camera">Capture photo</string>
    <string name="button_gallery">Choose from gallery</string>
    <string name="button_open_list">View product list</string>
    <string name="hint_id">Enter product id</string>
    <string name="hint_name">Enter product name</string>
    <string name="hint_description">Enter product description</string>
    <string name="hint_price">Enter product price</string>
    <string name="label_image">Product image</string>
    <string name="dialog_update_title">Confirm update</string>
    <string name="dialog_delete_title">Confirm deletion</string>
    <string name="dialog_update_message">Do you want to update this product?</string>
    <string name="dialog_delete_message">Do you want to delete this product?</string>
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="toast_add_success">Product added successfully</string>
    <string name="toast_update_success">Product updated successfully</string>
    <string name="toast_delete_success">Product deleted successfully</string>
    <string name="toast_fill_fields">Please fill all required fields</string>
    <string name="toast_invalid_price">Please enter a valid price</string>
    <string name="toast_not_found">Product not found</string>
    <string name="toast_loaded_for_editing">Product loaded for editing</string>
    <string name="toast_camera_permission_denied">Camera permission is required to take a picture</string>
    <string name="toast_no_image">Please select or capture an image</string>
    <string name="list_title">Current products</string>
    <string name="price_with_currency">$%.2f</string>
</resources>
